--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "contentful": "^11.5.4",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.2.3",
     "next-intl": "^4.0.0",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
